--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,63 @@
 
-body{
-	background: url("../images/background1.jpg");
+
+
+.container {
+	background-image: url("assets/images/background1.jpg");
+  background-size: cover;
+  Background-repeat: no-repeat;
+	
+}
+p.navbar-brand{
+  font: italic, bold;
+  color: gold;
 
 }
+.panel-body{
+	text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: lightblue;
 
-.text-top{
-	color: #ffffff;
 }
-.btn-primary-lg{
+.col-lg-3{
+	float: right;
+  font-style: italic;
+  margin-left: 70%;
+  height: 150px;
+  width: 300px;
+}
+btn.btn-primary{
   color: red;
+  float: center;
 }
-.btn {
-	color: lightblue
-  margin: 50px;
+.btn.btn-success{
+	float: right;
+  background: blue;
+  color: white;
+
+
 }
 
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+
+
+.hero-text {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  float: center;
+  color: whitesmoke;
+
+.btn.btn-success {
+  color: blue;
+}
