--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,19 @@ color:#fff;
 */
 
 
-
+.imagecard{
+  width:100%;
+  height:200px;
+  padding : 1% 2% 1% 2%;
+  -moz-box-shadow: 0px 1px 5px 0px #676767;
+  -webkit-box-shadow: 0px 1px 5px 0px #676767;
+  box-shadow: 0px 1px 5px 0px #676767;
+  margin-bottom: 10px;
+}
+#image{
+  width:100%;
+  height:50%;
+}
 
 .card{
 width: 25em;
